Added def for Valheilheim, changed capitalisation

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -1,149 +1,13 @@
-@EXPERIMENT_DEFINITION:HAS[#id[crewReport]]:FOR[CelestialHarmony]
+@EXPERIMENT_DEFINITION:HAS[#id[crewReport]]
 {
-	@RESULTS
-	{
-	
-	// Crew reports for Aklarka: 
-	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded1 
-	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded2
-	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_crewReport_srfSplashed1
-	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_crewReport_srfSplashed2
-	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_crewReport_flyingLow1
-	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_crewReport_flyingLow2
-	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_flyingHigh1
-	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_flyingHigh2
-	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceLow1
-	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceLow2
-	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh1
-	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh2
 
-	// Crew reports for Dasar: 
-	DasarSrfLandedHotshores = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_HotShore1
-	DasarSrfLandedHotshores = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_HotShore2
-	DasarSrfLandedLowlands = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Lowlands1
-	DasarSrfLandedLowlands = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Lowlands2
-	DasarSrfLandedFlatplains = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Flatplains1
-	DasarSrfLandedFlatplains = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Flatplains2
-	DasarSrfLandedMidlands = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Midlands1
-	DasarSrfLandedMidlands = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Midlands2
-	DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed1
-	DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed2
-	DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow1
-	DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow2
-	DasarInSpaceHigh = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceHigh1
-	DasarInSpaceHigh = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceHigh2
+    @RESULTS
+    {
+        
+        ValheilheimSrfLandedApocalypseDesert = desert go whee
+       
+    }
 
-	}
 }
 
-@EXPERIMENT_DEFINITION:HAS[#id[evaReport]]:FOR[CelestialHarmony]
-{
-	@RESULTS
-	{
-	
-	// EVA reports for Aklarka: 
-	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_evaReport_srfLanded1 
-	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_evaReport_srfLanded2
-	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_evaReport_srfSplashed1
-	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_evaReport_srfSplashed2
-	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_evaReport_flyingLow1
-	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_evaReport_flyingLow2
-	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_evaReport_flyingHigh1
-	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_evaReport_flyingHigh2
-	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceLow1
-	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceLow2
-	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh1
-	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh2
 
-	}
-}
-
-@EXPERIMENT_DEFINITION:HAS[#id[mysteryGoo]]:FOR[CelestialHarmony]
-{
-	@RESULTS
-	{
-	
-	// Mystery goo for Aklarka: 
-	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfLanded1 
-	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfLanded2
-	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfSplashed1
-	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfSplashed2
-	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingLow1
-	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingLow2
-	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingHigh1
-	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingHigh2
-	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceLow1
-	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceLow2
-	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceHigh1
-	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceHigh2
-
-	// Mystery goo for Dasar
-	DasarSrfLandedHotshores = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_HotShore1
-	DasarSrfLandedHotshores = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_HotShore2
-	DasarSrfLandedLowlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Lowlands1
-	DasarSrfLandedLowlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Lowlands2
-	DasarSrfLandedFlatplains = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Flatplains1
-	DasarSrfLandedFlatplains = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Flatplains2
-	DasarSrfLandedMidlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Midlands1
-	DasarSrfLandedMidlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Midlands2
-	DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfSplashed1
-	DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfSplashed2
-	DasarInSpaceLowLavalakes = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_LavaLakes1
-	DasarInSpaceLowLavalakes = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_LavaLakes2
-	DasarInSpaceLowHotshores = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_HotShore1
-	DasarInSpaceLowHotshores = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_HotShore2
-	DasarInSpaceLowLowlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Lowlands1
-	DasarInSpaceLowLowlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Lowlands2
-	DasarInSpaceLowMidlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Midlands1
-	DasarInSpaceLowMidlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Midlands2
-	DasarInSpaceLowFlatplains = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_FlatPlains1
-	DasarInSpaceLowFlatplains = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_FlatPlains2
-	DasarInSpaceHigh = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceHigh1
-	DasarInSpaceHigh = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceHigh2
-
-	}
-}
-
-@EXPERIMENT_DEFINITION:HAS[#id[temperatureScan]]:FOR[CelestialHarmony]
-{
-	@RESULTS
-	{
-	
-	// Temperature for Aklarka: 
-	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_temperature_srfLanded1 
-	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_temperature_srfLanded2
-	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_temperature_srfSplashed1
-	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_temperature_srfSplashed2
-	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_temperature_flyingLow1
-	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_temperature_flyingLow2
-	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_temperature_flyingHigh1
-	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_temperature_flyingHigh2
-	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_temperature_inSpaceLow1
-	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_temperature_inSpaceLow2
-	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_temperature_inSpaceHigh1
-	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_temperature_inSpaceHigh2
-
-	}
-}
-
-@EXPERIMENT_DEFINITION:HAS[#id[surfaceSample]]:FOR[CelestialHarmony]
-{
-	@RESULTS
-	{
-	
-	// Temperature for Aklarka: 
-	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_surfaceSample_srfLanded1 
-	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_surfaceSample_srfLanded2
-	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_surfaceSample_srfSplashed1
-	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_surfaceSample_srfSplashed2
-	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_surfaceSample_flyingLow1
-	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_surfaceSample_flyingLow2
-	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_surfaceSample_flyingHigh1
-	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_surfaceSample_flyingHigh2
-	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_surfaceSample_inSpaceLow1
-	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_surfaceSample_inSpaceLow2
-	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_surfaceSample_inSpaceHigh1
-	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_surfaceSample_inSpaceHigh2
-
-	}
-}
