--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -209,18 +209,18 @@ Localization
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-	// Defs for Vallheilheim
-	#LOC_CH_Vallheilheim_displayName = Vallheilheim^N
-	#LOC_CH_Vallheilheim_description = Valheilheim is the desert planet of the Harmonia system. This planet has very small rings and a huge plain, most probably due to a *recent* cataclysmic event, such as a collision. This place would be great to shoot some movies !
+	// Defs for Valheilheim
+	#LOC_CH_Valheilheim_displayName = Vallheilheim^N
+	#LOC_CH_Valheilheim_description = Valheilheim is the desert planet of the Harmonia system. This planet has very small rings and a huge plain, most probably due to a *recent* cataclysmic event, such as a collision. This place would be great to shoot some movies !
 
-	#LOC_CH_Vallheilheim_biomeDisplayName_ApocalypseDesert = Apocalypse Desert
-	#LOC_CH_Vallheilheim_biomeDisplayName_Dunes = Dunes
-	#LOC_CH_Vallheilheim_biomeDisplayName_Lowlands = Lowlands
-	#LOC_CH_Vallheilheim_biomeDisplayName_Midlands = Midlands
-	#LOC_CH_Vallheilheim_biomeDisplayName_Highlands = Highlands
-	#LOC_CH_Vallheilheim_biomeDisplayName_Mountains = Mountains
-	#LOC_CH_Vallheilheim_biomeDisplayName_MountCeleste = Mount Celeste
-	#LOC_CH_Vallheilheim_biomeDisplayName_MountCeleste = Poles
+	#LOC_CH_Valheilheim_biomeDisplayName_ApocalypseDesert = Apocalypse Desert
+	#LOC_CH_Valheilheim_biomeDisplayName_Dunes = Dunes
+	#LOC_CH_Valheilheim_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Valheilheim_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Valheilheim_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Valheilheim_biomeDisplayName_Mountains = Mountains
+	#LOC_CH_Valheilheim_biomeDisplayName_MountCeleste = Mount Celeste
+	#LOC_CH_Valheilheim_biomeDisplayName_MountCeleste = Poles
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
