made files compatible with new release
why, proxima, why?

--- a/configs/Dasar.cfg
+++ b/configs/Dasar.cfg
@@ -13,7 +13,7 @@
         {
             displayName = #LOC_CH_Dasar_displayName
             description = #LOC_CH_Dasar_description
-			radius = 200000
+            radius = 200000
             geeASL = 0.2
             rotates = True
             rotationPeriod = 72000
@@ -36,38 +36,31 @@
             {
                 Value
                 {
-                    name = Lava lakes
+                    name = Lava Lakes
 					displayName = #LOC_CH_Dasar_biomeDisplayName_LavaLakes 
 					value = 2.0
-					color = #DD6D07
+					color = #AD5405
                 }
 				Value
                 {
-                    name = Hot shores
+                    name = Hot Shores
 					displayName = #LOC_CH_Dasar_biomeDisplayName_HotShores
 					value = 1.0
-					color = #8D07DD
+					color = #6E08AD
                 }
 				Value
                 {
-                    name = Lowlands
-					displayName = #LOC_CH_Dasar_biomeDisplayName_Lowlands
+                    name = Basalt Plateaus
+					displayName = #LOC_CH_Dasar_biomeDisplayName_BasaltPlateaus
 					value = 1.0
-					color = #080892
+					color = #080891
                 }
 				Value
                 {
-                    name = Flat plains
-					displayName = #LOC_CH_Dasar_biomeDisplayName_FlatPlains
-					value = 1.0
-					color = #299208
-                }
-				Value
-                {
-                    name = Midlands
-					displayName = #LOC_CH_Dasar_biomeDisplayName_Midlands
+                    name = Crater mountain
+					displayName = #LOC_CH_Dasar_biomeDisplayName_CraterMountain
 					value = 1.4
-					color = #925608
+					color = #915608
                 }
 			}
         }
@@ -77,7 +70,7 @@
             color = 1, 0.533, 0, 1
             inclination = 4
             eccentricity = 0.07
-            semiMajorAxis = 3336137532
+            semiMajorAxis = 1404378461.32459
             argumentOfPeriapsis = 15
             longitudeOfAscendingNode = 123
             meanAnomalyAtEpoch = 1.4
@@ -85,6 +78,14 @@
         }
         ScaledVersion
         {
+			EmissiveOverlay
+			{
+			emissiveMap = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/DasarEmissive.dds
+			color = 0.949, 0.49, 0.204, 1
+			brightness = 1
+			transparency = 0.1
+			}
+
             type = Vacuum
             fadeStart = 30000
             fadeEnd = 50000
@@ -104,7 +105,7 @@
 			fadeEnd = 150000
 			deactivateAltitude = 150000
 			minLevel = 2
-			maxLevel = 10
+			maxLevel = 9
 			minDetailDistance = 6
 			maxQuadLengthsPerFrame = 0.03				
 			materialType = AtmosphericTriplanarZoomRotation
@@ -173,6 +174,15 @@
 			}
             Mods
             {
+				VertexHeightMap
+                {
+                    map = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/DasarHeight.dds
+                    offset = -180
+                    deformity = 7500
+                    scaleDeformityByRadius = false
+                    order = 10
+                    enabled = True
+                }
                 VertexMitchellNetravaliHeightMap
                 {
                     map = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/DasarHeight.dds
@@ -315,7 +325,7 @@
         Ocean 
         {
             ocean = True
-            oceanColor = 1, 0.714, 0.325, 1
+            oceanColor = 0.949, 0.49, 0.204, 1
             oceanHeight = 0
             density = 4
             Material
@@ -325,8 +335,8 @@
                 shininess = 0.7
                 gloss = 0
                 tiling = 250
-                waterTex = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/lava.jpg
-                waterTex1 = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/lava.jpg
+                waterTex = BUILTIN/sea-water8
+                waterTex1 = BUILTIN/sea-water1
                 bTiling = 200
                 bumpMap = BUILTIN/quiet
                 displacement = 0
@@ -349,13 +359,12 @@
             }
             Mods
             {
-                EmissiveFX:NEEDS[KopernicusExpansion]
+                EmissiveFX
                 {
-					emissiveMap = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/DasarEmissive.png
-                    color = 1.0,0.3,0,1
-                    brightness = 1
-                    transparency = 0.4
-                }
+				color = 0.949, 0.49, 0.204, 1
+				brightness = 1
+				transparency = 0.1
+				}
             }
         }
     }
