--- a/configs/Po.cfg
+++ b/configs/Po.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = #LOC_CH_Po_displayName
-            description = #LOC_CH_Po_description
+            displayName = #LOC_CH_Po_biomeDisplayName_Lowlands
+            description = #LOC_CH_Po_biomeDisplayName_YoungImpactCraters
             radius = 100000
             geeASL = 0.07
             rotates = True
@@ -66,14 +66,14 @@
 				Value
                 {
                     name = Highest lands
-					displayName = #LOC_CH_Po_biomeDisplayName_HighestLands
+					displayName = #LOC_CH_Po_biomeDisplayName_HighestLands 
 					value = 1.4
 					color = #B9004D
                 }
 				Value
                 {
                     name = Nitrogen depot
-					displayName = #LOC_CH_Po_biomeDisplayName_NitrogenDepot
+					displayName = #LOC_CH_Po_biomeDisplayName_HighestLands 
 					value = 1.4
 					color = #7A009D
                 }
