--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -5,6 +5,7 @@
     {
         
         ValheilheimSrfLandedApocalypseDesert = desert go whee
+        ValheilheimSrfLandedLowlands = lowlands go whee
        
     }
 
