--- a/configs/Valheilheim.cfg
+++ b/configs/Valheilheim.cfg
@@ -12,12 +12,12 @@
         }
         Properties
         {
-            displayName = #LOC_CH_Vallheilheim_displayName
-            description = #LOC_CH_Vallheilheim_description
+            displayName = #LOC_CH_Valheilheim_displayName
+            description = #LOC_CH_Valheilheim_description
             radius = 450000
             geeASL = 0.8
             rotates = True
-            rotationPeriod = 72000
+            rotationPeriod = 172000
             tidallyLocked = False
 			albedo = 0.3
 			biomeMap = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/ValheilheimBiome.dds
@@ -37,57 +37,57 @@
 			{
 				Value
 				{
-					name = Apocalypse Desert
-					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_ApocalypseDesert
+					name = Apocalypse desert
+					displayName = #LOC_CH_Valheilheim_biomeDisplayName_ApocalypseDesert
 					value = 1.0
 					color = #CB0000
 				}
 				Value
 				{
 					name = Dunes
-					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_Dunes
+					displayName = #LOC_CH_Valheilheim_biomeDisplayName_Dunes
 					value = 1.0
 					color = #C6AB00
 				}
 				Value
 				{
 					name = Lowlands
-					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_Lowlands
+					displayName = #LOC_CH_Valheilheim_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #CB9100
 				}
 				Value
 				{
 					name = Midlands
-					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_Midlands
+					displayName = #LOC_CH_Valheilheim_biomeDisplayName_Midlands
 					value = 1.0
 					color = #0C00C6
 				}
 				Value
 				{
 					name = Highlands
-					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_Highlands
+					displayName = #LOC_CH_Valheilheim_biomeDisplayName_Highlands
 					value = 1.0
 					color = #00C65F
 				}
 				Value
 				{
 					name = Mountains
-					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_Mountains
+					displayName = #LOC_CH_Valheilheim_biomeDisplayName_Mountains
 					value = 1.0
 					color = #88C600
 				}
 				Value
 				{
 					name = Mount Celeste
-					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_MountCeleste
+					displayName = #LOC_CH_Valheilheim_biomeDisplayName_MountCeleste
 					value = 2.5
 					color = #C60094
 				}
 				Value
 				{
 					name = Poles
-					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_MountCeleste
+					displayName = #LOC_CH_Valheilheim_biomeDisplayName_Poles
 					value = 1.5
 					color = #BDBDBD
 				}
@@ -260,8 +260,6 @@
 		}
         PQS
         {
-
-	allowFootprints = true
             fadeStart = 50000
 			fadeEnd = 110000
 			deactivateAltitude = 120000
@@ -316,17 +314,14 @@
 			}
             Mods
             {
-                VertexMitchellNetravaliHeightMap
+				VertexHeightMap
                 {
                     map = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/ValheilheimHeight.dds
                     offset = 0
-                    deformity = 4500
-                    scaleDeformityByRadius = False
-                    order = 100
+                    deformity = 6000
+                    scaleDeformityByRadius = false
+                    order = 10
                     enabled = True
-
-					B = 0.5
-					C = 0.5
                 }
                 LandControl
 				{
@@ -414,7 +409,7 @@
 				VertexColorMap
                 {
                     map = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/ValheilheimClr.dds
-                    order = 100
+                    order = 1000
                     enabled = True
                 }
             }
