new dasar biome defs, fixed valheilheim

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -72,9 +72,8 @@ Localization
 
 	#LOC_CH_Dasar_biomeDisplayName_LavaLakes = Lava Lakes
 	#LOC_CH_Dasar_biomeDisplayName_HotShores = Hot Shores
-	#LOC_CH_Dasar_biomeDisplayName_Lowlands = Lowlands
-	#LOC_CH_Dasar_biomeDisplayName_FlatPlains = Flat Plains
-	#LOC_CH_Dasar_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Dasar_biomeDisplayName_BasaltPlateaus = Basalt Plateus
+	#LOC_CH_Dasar_biomeDisplayName_CraterMountain = Crater Mountain
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
@@ -220,7 +219,7 @@ Localization
 	#LOC_CH_Valheilheim_biomeDisplayName_Highlands = Highlands
 	#LOC_CH_Valheilheim_biomeDisplayName_Mountains = Mountains
 	#LOC_CH_Valheilheim_biomeDisplayName_MountCeleste = Mount Celeste
-	#LOC_CH_Valheilheim_biomeDisplayName_MountCeleste = Poles
+	#LOC_CH_Valheilheim_biomeDisplayName_Poles = Poles
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
