added defs for dasar, pt2

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -4,9 +4,29 @@
     @RESULTS
     {
         
-        ValheilheimSrfLandedApocalypseDesert = desert go whee
-        ValheilheimSrfLandedLowlands = lowlands go whee
+        DasarSrfLanded = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded1       
+        DasarSrfLanded = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded2       
+        DasarSrfLanded = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded3      
+        DasarSrfLanded = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded4       
+        DasarSrfLanded = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded5       
+        DasarSrfLanded = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded6       
+        DasarSrfLanded = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded7       
+        DasarSrfLanded = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded8
+        
+        DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed1
+        DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed2
        
+        DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow1
+        DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow2
+        DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow3
+        DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow4
+        DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow5
+        DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow6
+        DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow7
+        DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow8
+        DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow9
+        DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow10
+
     }
 
 }
