added defs for dasar, pt2

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -65,6 +65,8 @@ Localization
 	#LOC_CH_Cili_biomeDisplayName_Highlands = Highlands
 	
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+	
+	// Note: Dasar was giving me some problems, specifically about biomes. The defs here are placeholders, once the biomes are working they will be removed/modified.
 
 	// Defs for Dasar:
 	#LOC_CH_Dasar_displayName = Dasar^N
@@ -74,6 +76,27 @@ Localization
 	#LOC_CH_Dasar_biomeDisplayName_HotShores = Hot Shores
 	#LOC_CH_Dasar_biomeDisplayName_BasaltPlateaus = Basalt Plateus
 	#LOC_CH_Dasar_biomeDisplayName_CraterMountain = Crater Mountain
+		
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded1 = There is quite a lot of perilous terrain all about us, excluding the glowing lakes of molten rock quite close by. You think this is as close as you should get to them.
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded2 = Setting up in such a location is certainly a daring idea. Best to make sure no equipment rolls into the lava below!	
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded3 = The terrain is much more uneven here as it leads towards the basin. You hope the volcanic activity doesn't cause a huge fissure to open up and sawallow the craft.	
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded4 = Although the glimmering rocks around the craft are much more interesting than at higher altitudes, they're probably much too hot to be picked up beside a quick surface sample.	
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded5 = Thankfully, this region of the planet seems to be the safest. Let's hope it stays that way...
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded6 = Although these temperatures are as "cold" as they're going to get landed on this planet, its still swelteringly hot under this space suit!
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded7 = The ground is still quite stable here but some interesting formations and gradients are starting to appear.
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded8 = The occasional tremor shakes the craft. Thankfully, there's still some distance between you and the hypnotic oceans of lava if something were to break.
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed1 = Umm... its a little bit hot here. We should probably skedaddle out of here ASAP.
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed2 = Did we pack any radiators? Jeb, did you forget the radiators AGAIN?
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow1 = The gentle amber glow from the lava beneath you floods the capsule. It's a sight truly worth coming all this way for, but staring for too long makes your eyes start to water.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow2 = Watching the molten magma slowly twisting in the huge basins below you, it fills you with determination... and a little bit of concern as the heat hits the craft.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow3 = It's starting to get quite hot now. Let's hope our equipment can handle it!
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow4 = It's much easier to make out the bubbling details of the swirling lava amid the sooty landmasses now. Is that a good thing?
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow5 = Harsh cliffs and gradients appear to inhabit this part of the planet. Probably not the safest place to land.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow6 = In the distance, you notice a large boulder getting shook loose by the tectonic activity of the planet. It rolls closer to the lava lakes for a short while before getting stuck again in the temporary safety of the jagged terrain. You breathe a quick sigh of relief and return to the mission.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow7 = A thick layer of dusty ash and loose sediment appears to cover this part of the ground. The craft might be able to land here but it may be risky.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow8 = The terrain appears mostly flat, but the occasional cliff or mountain appears out of nowhere to disturb this theme.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow9 = Patches of smooth, brown basalt rock finally interrupt the jagged cliffs and layers of loose sediment. They're probably the best place to land.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow10 = From here, the terrain appears to be as calm as it's going to get. It's saddening that the safest place to land will likely avoid the beautiful view of the lava oceans.
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
