Changed capitalisation, Apocalypse desert -> Apocalypse Desert

--- a/configs/Valheilheim.cfg
+++ b/configs/Valheilheim.cfg
@@ -37,7 +37,7 @@
 			{
 				Value
 				{
-					name = Apocalypse desert
+					name = Apocalypse Desert
 					displayName = #LOC_CH_Valheilheim_biomeDisplayName_ApocalypseDesert
 					value = 1.0
 					color = #CB0000
