added surface sample science for Valheilheim, Desert and Dunes biome

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -31,4 +31,21 @@
 
 }
 
+@EXPERIMENT_DEFINITION:HAS[#id[surfaceSample]]
+{
+
+    @RESULTS
+    {
+        
+        ValheilheimSrfLandedApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_ApocalypseDesert1
+        ValheilheimSrfLandedApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_ApocalypseDesert2
+        ValheilheimSrfLandedApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_ApocalypseDesert3
+        
+        ValheilheimSrfLandedDunes = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes1
+        ValheilheimSrfLandedDunes = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes2
+        ValheilheimSrfLandedDunes = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes3
+        
+    }
+
+}
 
