added surface sample defs for Valheilheim

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -232,7 +232,7 @@ Localization
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 	// Defs for Valheilheim
-	#LOC_CH_Valheilheim_displayName = Vallheilheim^N
+	#LOC_CH_Valheilheim_displayName = Valheilheim^N
 	#LOC_CH_Valheilheim_description = Valheilheim is the desert planet of the Harmonia system. This planet has very small rings and a huge plain, most probably due to a *recent* cataclysmic event, such as a collision. This place would be great to shoot some movies !
 
 	#LOC_CH_Valheilheim_biomeDisplayName_ApocalypseDesert = Apocalypse Desert
@@ -244,9 +244,19 @@ Localization
 	#LOC_CH_Valheilheim_biomeDisplayName_MountCeleste = Mount Celeste
 	#LOC_CH_Valheilheim_biomeDisplayName_Poles = Poles
 
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_ApocalypseDesert1 = You lean down and take a sample of the sand. It's getting everywhere! Little crevices in the suit are filled with dust.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_ApocalypseDesert2 = After taking a sample from the surface, you cap the tube. Tightly. Else the sand gets absolutely everywhere. 
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_ApocalypseDesert3 = Taking a surface sample from Valheilheim is quite easy. In fact, you have to try quite hard to get rid of the sand from your spacesuit and ship.
+
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes1 = You get on the ground and scoop up some dirt. Here, you get some rocks as well.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes2 = This area seems to be a bit more rocky. You bend down and pop a few into a sample tube. The scientists back on Sanctar are gonna love this! 
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes3 = The rocks here are a very nice shade of golden-brown. You stare at the surface, thinking how beautiful this planet is.
+
+
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 	// Misc defs
+
 	#LOC_CH_tip1 = Landing in lava...
 	#LOC_CH_tip2 = Getting surface samples from Aklarka...
 	#LOC_CH_tip3 = Misspelling spaceflight...
@@ -255,6 +265,7 @@ Localization
 	#LOC_CH_tip6 = Pushing out of orbit...
 	#LOC_CH_tip7 = Never going to Dasar...
 	#LOC_CH_tip8 = Running out of RAM...
+	#LOC_CH_tip8 = Dusting Valheilheim...
 
 	}
 
