added lowland surface science for valheilheim

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -44,7 +44,10 @@
         ValheilheimSrfLandedDunes = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes1
         ValheilheimSrfLandedDunes = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes2
         ValheilheimSrfLandedDunes = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes3
-        
+
+        ValheilheimSrfLandedLowlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands1
+        ValheilheimSrfLandedLowlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands2
+        ValheilheimSrfLandedLowlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands3        
     }
 
 }
