added lowland surface sample for valheilheim

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -252,6 +252,10 @@ Localization
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes2 = This area seems to be a bit more rocky. You bend down and pop a few into a sample tube. The scientists back on Sanctar are gonna love this! 
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Dunes3 = The rocks here are a very nice shade of golden-brown. You stare at the surface, thinking how beautiful this planet is.
 
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands1 = The ground here reminds you of Duna, but not so red. A tear flows as you drop down to get a sample.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands2 = The scientists back at Mission Control instruct you to be careful with these samples. Apparently this area may contain water!
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands3 = The soil here is very loose at the surface, but gets stiffer deeper down. We may need a sample drill for deeper core samples.
+
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
