added midland+highland surface sample for Valheilheim

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -48,6 +48,14 @@
         ValheilheimSrfLandedLowlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands1
         ValheilheimSrfLandedLowlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands2
         ValheilheimSrfLandedLowlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands3        
+
+        ValheilheimSrfLandedMidlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Midlands1
+        ValheilheimSrfLandedMidlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Midlands2
+        ValheilheimSrfLandedMidlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Midlands3        
+
+        ValheilheimSrfLandedHighlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands1
+        ValheilheimSrfLandedHighlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands2
+        ValheilheimSrfLandedHighlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands3        
     }
 
 }
