added midland+highland surface sample for Valheilheim

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -256,6 +256,14 @@ Localization
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands2 = The scientists back at Mission Control instruct you to be careful with these samples. Apparently this area may contain water!
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Lowlands3 = The soil here is very loose at the surface, but gets stiffer deeper down. We may need a sample drill for deeper core samples.
 
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Midlands1 = The surface here is harder, requiring the sample drill to collect. The fine dust appears to be a very beautiful shade of golden-brown.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Midlands2 = After drilling through the surface, you collect samples. The scientists back home instruct you to get multiple samples from different depths.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Midlands3 = While waiting for the drill to make it's way through the surface, you think about Valheilheim. What happened here? Did life ever exist here? More science will tell.
+
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands1 = The surface seems to get harder the higher you go. The drill is really struggling here. The knowledge we get from this sand will be worth it though!
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands2 = The drill is overheating. You set it aside to cool down, making sure to check for any sensitive hardware nearby.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands3 = The powderizing bit is too much for your drill. You switch to a coring bit, which helps. The scientists back home will probably be happier anyway with a cylinder of Valheilheim.
+
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
