woohoo late nighters

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -56,6 +56,15 @@
         ValheilheimSrfLandedHighlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands1
         ValheilheimSrfLandedHighlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands2
         ValheilheimSrfLandedHighlands = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands3        
+
+        ValheilheimSrfLandedMountCeleste = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste1
+        ValheilheimSrfLandedMountCeleste = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste2
+        ValheilheimSrfLandedMountCeleste = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste3        
+
+        ValheilheimSrfLandedPoles = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Poles1
+        ValheilheimSrfLandedPoles = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Poles2
+        ValheilheimSrfLandedPoles = #LOC_CH_Valheilheim_ScienceDef_surfaceSample_Poles3        
+
     }
 
 }
